# quantum-diffusion

./: .gitignore  experiments.ipynb  pyproject.toml  requirements.txt  setup.py
scripts/: benchmark_image_encodings.py  check_python_gpu.sbatch  run_diffusion_cpu.sbatch  run_diffusion_gpu.sbatch  test_frqi_encoding.py  test_torch_cuda.py  test_torch_cuda.sbatch  train_diffusion.py
scripts/hpc/: run_diffusion.sbatch
src/quantum_diffusion/: __main__.py  circuits.py  data.py  diffusion.py  main.py  models.py  noise.py
src/quantum_diffusion/nn/: __init__.py  conv.py  dense.py  interface.py  qconv.py  qdense.py  unet.py  unet_simple.py  utils.py
