[project]
name = "quantum-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jan Smółka", email = "jp.smolka@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "einops>=0.8.1",
    "kiwisolver>=1.4.8",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pennylane>=0.42.1",
    "piqa>=1.3.2",
    "qiskit-aer>=0.17.1",
    "qiskit-machine-learning>=0.8.3",
    "qiskit-terra>=0.46.3",
    "qw-map>=0.1.2",
    "ray>=2.48.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchmetrics>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
quantum-diffusion = "quantum_diffusion:main"

[tool.basedpyright]
reportUnusedCallResult = false
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "basedpyright>=1.23.0",
]
