[project]
name = "quantum-diffusion-research"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "quantum-diffusion",
    "quantum-datasets",
    "quantum-image-encoding",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
scripts = [
    "torch>=2.10.0",
    "kornia>=0.8.2",
    "pennylane>=0.44.0",
    "pennylane-catalyst>=0.14.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
quantum-diffusion = { workspace = true }
quantum-datasets = { workspace = true }
quantum-image-encoding = { workspace = true }

[tool.ruff]
exclude = [".venv"]
line-length = 140

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
